<resources>
    <!-- General strings-->
    <string name="app_name">LettuceCook</string>

    <!-- Account Activity strings-->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="createAccountButtonText">Create Account</string>
    <string name="createAccountText">No Account? Create one here!</string>
    <string name="loginAccountText">Have an Account? Login here!</string>
    <string name="account">Account</string>

    <!-- Main Activity strings-->
    <string name="browse">Browse</string>
    <string-array name="browse_types">
        <item name="category">Category</item>
        <item name="area">Area</item>
    </string-array>

    <string-array name="browse_categories">
        <item>Random</item>
        <item>Beef</item>
        <item>Breakfast</item>
        <item>Chicken</item>
        <item>Dessert</item>
        <item>Goat</item>
        <item>Lamb</item>
        <item>Miscellaneous</item>
        <item>Pasta</item>
        <item>Pork</item>
        <item>Seafood</item>
        <item>Side</item>
        <item>Starter</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
    </string-array>

    <!-- Image file names for displaying browse categories -->
    <!-- https://www.themealdb.com/images/media/meals/<image>.jpg -->
    <string-array name="browse_categories_images">
        <!-- Random - to be replaced -->
        <item>random</item>
        <!-- Beef -->
        <item>vtqxtu1511784197</item>
        <!-- Breakfast -->
        <item>1550441882</item>
        <!-- Chicken -->
        <item>wruvqv1511880994</item>
        <!-- Dessert -->
        <item>wyrqqq1468233628</item>
        <!-- Goat -->
        <item>cuio7s1555492979</item>
        <!-- Lamb -->
        <item>uttrxw1511637813</item>
        <!-- Miscellaneous -->
        <item>yvpuuy1511797244</item>
        <!-- Pasta -->
        <item>usywpp1511189717</item>
        <!-- Pork -->
        <item>md8w601593348504</item>
        <!-- Seafood -->
        <item>1548772327</item>
        <!-- Side -->
        <item>qqpwsy1511796276</item>
        <!-- Starter -->
        <item>wurrux1468416624</item>
        <!-- Vegan -->
        <item>rvxxuy1468312893</item>
        <!-- Vegetarian -->
        <item>tvtxpq1511464705</item>
    </string-array>

    <string-array name="browse_areas">
        <item>American</item>
        <item>British</item>
        <item>Canadian</item>
        <item>Chinese</item>
        <item>Dutch</item>
        <item>Egyptian</item>
        <item>French</item>
        <item>Greek</item>
        <item>Indian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Jamaican</item>
        <item>Japanese</item>
        <item>Kenyan</item>
        <item>Malaysian</item>
        <item>Mexican</item>
        <item>Moroccan</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Spanish</item>
        <item>Thai</item>
        <item>Tunisian</item>
        <item>Turkish</item>
        <item>Unknown</item>
        <item>Vietnamese</item>
    </string-array>

    <!-- Image file names for displaying a random meal -->
    <!-- https://www.themealdb.com/images/media/meals/<image>.jpg -->
    <string-array name="browse_random_images">
        <item>1550442508</item>
        <item>1544384070</item>
        <item>wtqrqw1511639627</item>
        <item>sxwquu1511793428</item>
        <item>xutquv1505330523</item>
        <item>wssvvs1511785879</item>
        <item>qxytrx1511304021</item>
        <item>yrstur1511816601</item>
        <item>a15wsa1614349126</item>
        <item>4i5cnx1587672171</item>
    </string-array>

    <!-- Recipe Details Activity strings-->
    <string name="mealLabel">Meal Name</string>
    <string name="categoryLabel">Category</string>
    <string name="areaLabel">Area</string>
    <string name="instructionLabel">Instructions</string>
    <string name="ingredientLabel">Ingredients</string>
    <string name="youtubeLabel">YouTube Guides</string>
    <string name="sourceLabel">View Source</string>
    <string name="addShoppingList">Add to Shopping List</string>
    <string name="dateModifiedLabel">Date Modified</string>

    <!-- Account Recipes-->
    <string name="accountRecipeTitle">Your Recipes</string>

    <!-- Create Recipe strings-->
    <string name="createRecipeName">Recipe Name</string>
    <string name="createRecipeArea">Recipe Origin</string>
    <string name="createRecipeCategory">Recipe Category</string>
    <string name="createRecipeInstructions">Recipe Instructions</string>
    <string name="createRecipeButton">Create a Recipe!</string>
    <string name="addIngredientButton">Add Ingredient</string>

    <!-- Display created ingredients strings -->
    <string name="ingredientName">Ingredient Name</string>
    <string name="ingredientMeasure">Ingredient Measurement</string>

    <!-- Display created recipes strings -->
    <string name="createdRecipeTitle">View Recipes</string>
    <string name="createdRecipeName">Ingredient Measurement</string>
    <string name="calories">- kcal</string>
</resources>