<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/inputLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentBottom="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/inputLoginPassword"
        android:layout_below="@+id/inputLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentBottom="false"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLoginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        />

    <TextView
        android:id="@+id/createAccountLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:text="@string/createAccountText"
        android:textColor="@color/dark_green"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/dark_green"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>