<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/api_ingredient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredientName"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/api_ingredient_measure"
            app:layout_constraintStart_toStartOf="parent">
        </TextView>

        <TextView
            android:id="@+id/api_ingredient_measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredientMeasure"
            android:textSize="16sp"
            android:textColor="@color/dark_green"
            app:layout_constraintTop_toBottomOf="@id/api_ingredient_name"
            app:layout_constraintStart_toStartOf="parent">
        </TextView>
        <TextView
            android:id="@+id/api_ingredient_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            android:textSize="18sp"
            android:textColor="@color/dark_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>